# commandbay

./: .dockerignore  .gitignore  .gitlab-ci.yml  Makefile  Pipfile  README.md  alembic.ini  bot.py  commandbay.spec  env_sample.txt  kanboard.toml.sample  pyproject.toml  python-test.yml  start_server.py  start_server.sh  startup_message_sample.txt
alembic/: env.py
alembic/versions/: 1bd8499e2708_initial.py  7cf2b75b17ea_tts_settings_and_rewards.py  cbec9fdeeeb7_update_user.py
arduino/: README.md  arduino.ino  pump.ino
arduino/control_power_supply/: control_power_supply.ino
arduino/pump/: PowerSupply.h  power_supply.ino  pump.ino
arduino/test/: test.ino
commandbay/: __init__.py  cli.py  server.py
commandbay/core/: db.py  settings.py  tts.py  twitch.py  utils.py
commandbay/models/: user.py
commandbay/resources/: arduino_power.py  do_tts.py  kanboard.py  log_message.py  pantheon.py  prometheus.py  random_num.py  rewards.py  settings.py  spotify.py  test.py  user.py  utils.py
commandbay/utils/: environ.py  timeout.py
docker/: Dockerfile.base  Dockerfile.docs  Dockerfile.prod  Dockerfile.test  run_tests.sh
docs/: .gitignore  Makefile
docs/source/: .gitignore  conf.py  index.rst
frontend/: Makefile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  Main.elm  Model.elm  Msg.elm  PowerSupply.elm  View.elm  utils.tsx
frontend/types/: index.d.ts
plugins/: affection.py  sample_plugin.py
scripts/: version.py
tests/: conftest.py  factories.py  test_frontend.py  test_models.py  tts_test.py
twitch_bot/: arduino.py  bot.py  cli.py  db.py  greetings.py  kanboard_integ.py  server.py  spotify.py  tts.py  utils.py
twitch_bot/core/: arduino.py  db.py  kanboard.py  spotify.py  tts.py
twitch_bot/models/: user.py  users.py
twitch_bot/resources/: arduino_power.py  do_tts.py  kanboard.py  log_message.py  random_num.py  rewards.py  (+3 more)
(+39 files in other folders)
