[tool.poetry]
name = "twitch-bot"
version = "0.1.0"
description = ""
authors = ["Violet Eldridge <github@violet-mica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
twitchio = "^2.8.2"
pyttsx3 = "^2.90"
kanboard = "^1.1.5"
spotipy = "^2.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
