[tool.poetry]
name = "commandbay"
version = "0.1.0"
description = ""
authors = ["Violet Eldridge <github@violet-mica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# would use ^3.11 but pyinstaller wants a specific range
python = ">=3.11,<3.13"
twitchio = "^2.8.2"
pyttsx3 = "^2.90"
kanboard = "^1.1.5"
spotipy = "^2.23.0"
pyserial = "^3.5"
pydantic = "^2.5.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
fastapi = "^0.104.1"
httpx = "^0.25.1"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
coverage = "^7.3.2"
pytest-asyncio = "^0.23.2"
pytest-factoryboy = "^2.6.0"
selenium = "^4.15.2"
ipdb = "^0.13.13"
ipython = "^8.18.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
poetry-plugin-export = "^1.6.0"
sphinxcontrib-openapi = "^0.8.3"


[tool.poetry.group.build.dependencies]
pyinstaller = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
